--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,15 @@
     <string name="action_settings">Settings</string>
     <string name="login_agreement">Нажимая на кнопку, я даю согласие на обработку персональных данных, соглашаюсь с <a href="https://kassa.taxi/privacy">политикой конфиденциальности</a> и принимаю условия <a href="https://kassa.taxi/agreement">лицензионного соглашения</a>.</string>
     <string name="login_btn">Войти</string>
-    <string name="login_agreement_title">Я принимаю условия</string>
+    <string name="login_agreement_title">Подтверждаю свое согласие на обработкуи хранение моих персональных данныхв соответствии с пользовательским соглашением</string>
     <string name="accept_conditions_error">необходимо принять условия работы</string>
     <string name="input_field_error">заполните поле</string>
     <string name="wrong_format_error">неправильный формат</string>
     <string name="intro_message">Удобные выплаты для водителей с баланса агрегаторов такси на личный счет</string>
     <string name="registration">Регистрация</string>
+    <string name="input_phone_number">Введите номер телефона</string>
+    <string name="continue_hint">Далее</string>
+    <string name="register_application">Заявка на подключение</string>
     <string-array name="spinner_test">
         <item>Test 1</item>
         <item>Test 2</item>
