--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
         <item>Test 2</item>
         <item>Test 3</item>
     </string-array>
+
+    <!--    Profile-->
+    <string name="exit">Выход</string>
 </resources>
