--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="login_agreement">Нажимая на кнопку, я даю согласие на обработку персональных данных, соглашаюсь с <a href="https://kassa.taxi/privacy">политикой конфиденциальности</a> и принимаю условия <a href="https://kassa.taxi/agreement">лицензионного соглашения</a>.</string>
     <string name="login_btn">Войти</string>
-    <string name="login_agreement_title">Подтверждаю свое согласие на обработкуи хранение моих персональных данныхв соответствии с пользовательским соглашением</string>
+    <string name="login_agreement_title">Подтверждаю свое согласие на обработку и хранение моих персональных данныхв соответствии с пользовательским соглашением</string>
     <string name="accept_conditions_error">необходимо принять условия работы</string>
     <string name="input_field_error">заполните поле</string>
     <string name="wrong_format_error">неправильный формат</string>
@@ -32,4 +32,6 @@
     <string name="withdrawal_applications">Заявки на вывод</string>
     <string name="accounts_and_cards">Счета и карты</string>
     <string name="support_service">Служба поддержки</string>
+    <!--    Balance-->
+    <string name="all_partners_sum">Общая сумма по всем партнерам</string>
 </resources>
