--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,9 @@
     <string name="support_service">Служба поддержки</string>
     <!--    Balance-->
     <string name="all_partners_sum">Общая сумма по всем партнерам</string>
+    <string name="yandex_title">Яндекс Такси</string>
+    <string name="citymobil_title">Ситимобил</string>
+    <string name="gett_title">Gett taxi</string>
+    <string name="withdraw">Вывести</string>
+    <string name="balance_format">%s ₽</string>
 </resources>
