added Accounts dialogs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,12 @@
     <string name="instant_withdrawal">Моментальный вывод</string>
     <string name="add_account">Добавить счет</string>
     <string name="add_card">Добавить карту</string>
+    <string name="understand">Понятно</string>
+    <string name="daily_withdrawal_dialog_message">Вывод на любую карту. За вывод 1%. Перевод происходит один раз в день. Только в будни! В Субботу , воскресенье и официальные праздничные дни переводов нет!
+    Заявки на вывод, которые были оставлены в приложении до 12:00 дня, будут обработаны этим же днём. Поступление денежных средств происходит ближе к 18:00 вечера. В очень редких случаях до 20:00 вечера.
+    Напоминаем, что обязательный остаток в программе 500 рублей. Выводить средства можно от 1000 рублей.
+    </string>
+    <string name="instant_withdrawal_dialog_message">Выводить средства можно на любую банковскую карту. За вывод взимается 4 % с суммы вывода.
+    \n\nНапоминаем,что обязательный остаток в программе 500 рублей.Выводить средства можно  от 1000 рублей. Просим обратить внимание,что в день вы можете вывести не более 10.000 рублей.(это временная мера).
+    </string>
 </resources>
