--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,8 @@
     <string name="payment_account">Расчетный счет</string>
     <string name="bik">БИК</string>
     <string name="fill_all_fields">Заполните все поля</string>
+    <string name="enter_card_number">Введите номер карты</string>
+    <string name="new_card_message">Для перевода средств достаточно ввести только номер вашей карты</string>
     <string name="order_format">Р/с %s</string>
     <string name="daily_withdrawal_dialog_message">Вывод на любую карту. За вывод 1%. Перевод происходит один раз в день. Только в будни! В Субботу , воскресенье и официальные праздничные дни переводов нет!
     Заявки на вывод, которые были оставлены в приложении до 12:00 дня, будут обработаны этим же днём. Поступление денежных средств происходит ближе к 18:00 вечера. В очень редких случаях до 20:00 вечера.
