--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,9 @@
     <string name="commission_title">Комиссия</string>
     <string name="with_commission">с учетом комиссии</string>
     <string name="connect_account">Подключить счёт</string>
+    <string name="sum">Сумма</string>
+    <string name="enter_amount">Укажите сумму</string>
+    <string name="send_request">Отправить заявку</string>
     <string name="no_withdrawal_requests">Нет заявок на вывод</string>
     <string name="no_withdrawal_message">Чтобы выводить средства, подключите хотя бы один счет и создайте заявку</string>
     <!--    Accounts-->
@@ -58,6 +61,7 @@
     <string name="instant_withdrawal">Моментальный вывод</string>
     <string name="add_account">Добавить счет</string>
     <string name="add_card">Добавить карту</string>
+    <string name="add_new_card">Добавить новую карту</string>
     <string name="add_button_text">Добавить</string>
     <string name="understand">Понятно</string>
     <string name="delete_account">Удаление счета</string>
