added OrdersFragment, OrdersViewModel, OrdersTaxiAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     <string name="instant_withdrawal_dialog_message">Выводить средства можно на любую банковскую карту. За вывод взимается 4 % с суммы вывода.
     \n\nНапоминаем,что обязательный остаток в программе 500 рублей.Выводить средства можно  от 1000 рублей. Просим обратить внимание,что в день вы можете вывести не более 10.000 рублей.(это временная мера).
     </string>
+    <!--    Orders-->
+    <string name="info_unavailable">Информация временно недоступна</string>
 </resources>
