--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="or">Или</string>
     <string name="prepare_this_documents">При выборе регистрации через загруженные документы приготовьте:</string>
     <string name="documents_list">1. Водительское удостоверение \n2. Паспорт (страница с фото и пропиской) \n3. СТС \n4. Лицензию</string>
+    <string name="select_agregator">Выберите своего агрегатора для подключения</string>
 </resources>
