--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,9 @@
     <string name="replenish">Пополнить</string>
     <string name="balance_format">%s ₽</string>
     <string name="fuel_title">Топливо</string>
+    <string name="fuel_replenish">Пополнение топлива</string>
+    <string name="choose_aggregator">Выберите агрегатор</string>
+    <string name="enter_charge_amount">Введите сумму списания</string>
     <!--    Withdraws-->
     <string name="withdraws_title">Заявки на вывод</string>
     <string name="withdraw_title">Заявка на вывод</string>
@@ -93,7 +96,7 @@
     <string name="or">Или</string>
     <string name="prepare_this_documents">При выборе регистрации через загруженные документы приготовьте:</string>
     <string name="documents_list">1. Водительское удостоверение \n2. Паспорт (страница с фото и пропиской) \n3. СТС \n4. Лицензию</string>
-    <string name="select_agregator">Выберите своего агрегатора для подключения</string>
+    <string name="select_aggregator">Выберите своего агрегатора для подключения</string>
     <string name="connection">Подключение</string>
     <string name="driver_license">Водительское удостоверение</string>
     <string name="passport_number">Серия и номер паспорта</string>
