added custom keyboard to AuthCodeFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,17 @@
     <string name="application_success_message">В ближайшее время наш менеджер свяжется с вами по телефону</string>
     <string name="ok">Хорошо</string>
     <string name="back">Назад</string>
+
+    <string name="num0">0</string>
+    <string name="num1">1</string>
+    <string name="num2">2</string>
+    <string name="num3">3</string>
+    <string name="num4">4</string>
+    <string name="num5">5</string>
+    <string name="num6">6</string>
+    <string name="num7">7</string>
+    <string name="num8">8</string>
+    <string name="num9">9</string>
     <!--    Profile-->
     <string name="exit">Выход</string>
     <string name="balance">Баланс</string>
