added scrollToPosition, changed Withdraw logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="send_request">Отправить заявку</string>
     <string name="no_withdrawal_requests">Нет заявок на вывод</string>
     <string name="enter_sum_error">Введите сумму</string>
+    <string name="input_error">Ошибка ввода</string>
     <string name="no_withdrawal_message">Чтобы выводить средства, подключите хотя бы один счет и создайте заявку</string>
     <!--    Accounts-->
     <string name="accounts_title">Счета и карты</string>
