--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="internet_unavailable">Интернет недоступен</string>
     <!--    Balance-->
     <string name="all_partners_sum">Общая сумма по всем партнерам</string>
-    <string name="yandex_title">Яндекс Такси</string>
+    <string name="yandex_title">Яндекс.Такси</string>
     <string name="citymobil_title">Ситимобил</string>
     <string name="gett_title">Gett taxi</string>
     <string name="rosneft_title">Роснефть</string>
@@ -120,7 +120,7 @@
     <string name="total">Итог</string>
     <string name="order_balance_format">Итог: %s₽</string>
     <!--    Registration-->
-    <string name="select_registration_variant">Выберете один из двух вариантов регистрации</string>
+    <string name="select_registration_variant">Выберите один из двух вариантов регистрации</string>
     <string name="set_phone_number">Указать номер телефона</string>
     <string name="download_documents">Загрузить документы</string>
     <string name="or">Или</string>
