--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,9 +126,19 @@
     <string name="set_phone_number">Указать номер телефона</string>
     <string name="download_documents">Загрузить документы</string>
     <string name="or">Или</string>
-    <string name="prepare_this_documents">При выборе регистрации через загруженные документы приготовьте:</string>
-    <string name="documents_list">1. Водительское удостоверение \n2. Паспорт (страница с фото и пропиской) \n3. СТС \n4. Лицензию</string>
     <string name="connection">Подключение</string>
+    <string name="connection_terms">Условия подключения</string>
+    <string name="terms_description"><![CDATA[Мы подключаем к <span style=color:#F1C46E>"Яндекс.Такси, GetTaxi, Ситимобил</span>. Предлагаем вам на выбор 3 варианта условий подключения:
+        <br><br><b>Первый</b> - это 3% с каждого заказа, помимо % агрегатора.
+        <br><b>Второй</b> - это фиксированные  60₽ в день за подключение к любым двум агрегаторам.
+        <br><b>Третий</b> - это фиксированные 70₽ в день за подключение к трём агрегаторам.
+        <br><br>Варианты вывода денежных средств:
+        <br>- Ежедневный вывод 1% с суммы вывода.
+        <br>- Моментальный вывод 4% с суммы вывода.]]></string>
+    <string name="subscription_fee_description">Абонентская плата списывается  один раз в неделю за уже отработанные вами дни. Списание происходит сразу за 7 дней , то есть 420 или 490 рублей спишется с вас в конце недели с воскресенья на понедельник.
+        \n\nАбонентская плата списывается автоматически и если вы с Понедельника по Воскресенье не выполнили ни одного заказа, то списания абонентской платы не произойдет.</string>
+    <string name="connection_conditions_title">У нас лучшие условия подключения!</string>
+    <string name="view_terms"><u>Ознакомиться с условиями</u></string>
     <string name="driver_license">Водительское удостоверение</string>
     <string name="driver_license_front_side">Водит. удостоверение (лицевая сторона)</string>
     <string name="driver_license_front">Водит. удостоверение \n (лицевая сторона)</string>
