update IntroFragment, app icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">Fast Kassa</string>
+    <string name="app_name">КассаТакси</string>
+    <string name="kassa">Касса</string>
+    <string name="taxi">Такси</string>
+    <string name="work_in_taxi">работай в такси!</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_desc">Navigation header</string>
