fixed registration dialog colors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,9 +136,9 @@
     <string name="connection">Подключение</string>
     <string name="connection_terms">Условия подключения</string>
     <string name="terms_description"><![CDATA[Мы подключаем к <span style=color:#F1C46E>"Яндекс.Такси, GetTaxi, Ситимобил</span>. Предлагаем вам на выбор 3 варианта условий подключения:
-        <br><br><b>Первый</b> - это 3% с каждого заказа, помимо % агрегатора.
-        <br><b>Второй</b> - это фиксированные  60₽ в день за подключение к любым двум агрегаторам.
-        <br><b>Третий</b> - это фиксированные 70₽ в день за подключение к трём агрегаторам.
+        <br><br><b><span style=color:#FFFFFF>Первый</span></b> - это 3% с каждого заказа, помимо % агрегатора.
+        <br><b><span style=color:#FFFFFF>Второй</span></b> - это фиксированные  60₽ в день за подключение к любым двум агрегаторам.
+        <br><b><span style=color:#FFFFFF>Третий</span></b> - это фиксированные 70₽ в день за подключение к трём агрегаторам.
         <br><br>Варианты вывода денежных средств:
         <br>- Ежедневный вывод 1% с суммы вывода.
         <br>- Моментальный вывод 4% с суммы вывода.]]></string>
