--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,8 @@
     <string name="bik">БИК</string>
     <string name="fill_all_fields">Заполните все поля</string>
     <string name="enter_card_number">Введите номер карты</string>
+    <string name="enter_full_card_number">Введите 16-значный номер</string>
+    <string name="card_added">Карта добавлена</string>
     <string name="new_card_message">Для перевода средств достаточно ввести только номер вашей карты</string>
     <string name="order_format">Р/с %s</string>
     <string name="daily_withdrawal_dialog_message">Вывод на любую карту. За вывод 1%. Перевод происходит один раз в день. Только в будни! В Субботу , воскресенье и официальные праздничные дни переводов нет!
