renamed some string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,11 @@
     <string name="continue_hint">Далее</string>
     <string name="register_application">Заявка на подключение</string>
     <string name="register_application_success">Заявка на подключение отправлена!</string>
-    <string name="application_success_message">В ближайшее время наш менеджер свяжется с вами по телефону</string>
+    <string name="application_success_message">В ближайшее время наш оператор свяжется с вами по телефону</string>
     <string name="no_notifications">Пока нет уведомлений</string>
     <string name="notification">Уведомление</string>
     <string name="clear">Ясно!</string>
+    <string name="ok_keyboard">OK</string>
     <string name="ok">Хорошо</string>
     <string name="back">Назад</string>
     <string name="close">Закрыть</string>
@@ -177,7 +178,7 @@
     <string name="photo_loading">Загрузка фото</string>
     <string name="load_all_photos">Загрузите все фотографии</string>
     <string name="reshoot">Переснять</string>
-    <string name="library">Библиотека</string>
+    <string name="load_from_phone">Загрузить с телефона</string>
     <string name="done">Готово</string>
 
     <string name="photo1">Фото 1</string>
