--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,9 @@
     <string name="withdraw_create_format">Баланс: %s₽</string>
     <string name="bank_card">Банковская карта</string>
     <string name="no_withdrawal_message">Чтобы выводить средства, подключите хотя бы один счет и создайте заявку</string>
+    <string name="daily_withdrawal_message">Вывод на любую карту. За вывод 1%. Перевод происходит один раз в день. Только в будни!</string>
+    <string name="instant_withdrawal_message">Выводить средства можно на любую банковскую карту. За вывод взимается 4 %  с суммы вывода.</string>
+    <string name="detailed">Подробнее</string>
     <!--    Accounts-->
     <string name="accounts_title">Счета и карты</string>
     <string name="daily_withdrawal">Ежедневный вывод</string>
